Revert "Merge branch 'aboutPage'"
This reverts commit 8e123d94f6ac2a8ea882ae8b762edbcb08745b05, reversing
changes made to d1a15b82db2381f9b376e27376e6fe13209e6fac.

--- a/app/src/main/res/layout/activity_about_page.xml
+++ b/app/src/main/res/layout/activity_about_page.xml
@@ -6,446 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".AboutPage">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center">
-
-            <TextView
-                android:id="@+id/projectName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
-                android:text="Our Green Routine"
-                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
-                android:textSize="36sp"
-                android:textStyle="bold"
-                />
-
-            <TextView
-                android:id="@+id/siteDescription"
-                android:layout_width="363dp"
-                android:layout_height="161dp"
-                android:layout_marginTop="8dp"
-                android:text="The purpose of Our Green Routine is to inform users on how to properly recycle materials and how to better understand their environmental impact. Our app will be a one-stop-shop for environmental tools such as a carbon footprint tracker, recycling information, and personal climate action planning."
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                />
-
-            <TextView
-                android:id="@+id/teamName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="Team Liger"
-                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                />
-
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="Alex Gonzales"
-                android:textStyle="bold"
-                />
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="101dp"
-                android:layout_height="101dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                app:srcCompat="@drawable/alex"
-                />
-
-            <TextView
-                android:id="@+id/biography"
-                android:layout_width="344dp"
-                android:layout_height="78dp"
-                android:layout_marginTop="16dp"
-                android:text="A Junior ECE student at UT, Alex enjoys software and game design. Hobbies include making funny youtube videos, doing stand up, and recycling."
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
-
-            <TextView
-                android:id="@+id/ece"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="Eletrical and Computer Engineering"
-                />
-
-            <TextView
-                android:id="@+id/mpcommit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="@string/michaelcommits"
-                />
-
-            <TextView
-                android:id="@+id/mpIssues"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="... Issues"
-                />
-
-            <TextView
-                android:id="@+id/mptest"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="... Tests"
-                />
-            <TextView
-                android:id="@+id/name1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="Elgin Allen"
-                android:textStyle="bold"
-                />
-
-            <ImageView
-                android:id="@+id/imageView1"
-                android:layout_width="101dp"
-                android:layout_height="101dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-
-                app:srcCompat="@drawable/elgin"
-                />
-
-            <TextView
-                android:id="@+id/biography1"
-                android:layout_width="344dp"
-                android:layout_height="78dp"
-                android:layout_marginTop="16dp"
-                android:text="A Senior ECE student at UT, Elgin is an avid coder who likes rugby, running, and nature."
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
-
-            <TextView
-                android:id="@+id/ece1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="Eletrical and Computer Engineering"
-                />
-
-            <TextView
-                android:id="@+id/mpcommit1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="@string/michaelcommits"
-                />
-
-            <TextView
-                android:id="@+id/mpIssues1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="... Issues"
-                />
-
-            <TextView
-                android:id="@+id/mptest1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="... Tests"
-                />
-            <TextView
-                android:id="@+id/name2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="Hussam Djadi"
-                android:textStyle="bold"
-                />
-
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="101dp"
-                android:layout_height="101dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-
-                app:srcCompat="@drawable/hussam"
-                />
-
-            <TextView
-                android:id="@+id/biography2"
-                android:layout_width="344dp"
-                android:layout_height="78dp"
-                android:layout_marginTop="16dp"
-                android:text="A Junior ECE student at UT, Hussam loves solving challenging problems and learning new things. In his free time, he enjoys hiking."
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
-
-            <TextView
-                android:id="@+id/ece2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="Eletrical and Computer Engineering"
-                />
-
-            <TextView
-                android:id="@+id/mpcommit2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="@string/michaelcommits"
-                />
-
-            <TextView
-                android:id="@+id/mpIssues2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="... Issues"
-                />
-
-            <TextView
-                android:id="@+id/mptest2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="... Tests"
-                />
-            <TextView
-                android:id="@+id/name3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="Michael Pontikes"
-                android:textStyle="bold"
-                />
-
-            <ImageView
-                android:id="@+id/imageView3"
-                android:layout_width="101dp"
-                android:layout_height="101dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-
-                app:srcCompat="@drawable/michael"
-                />
-
-            <TextView
-                android:id="@+id/biography3"
-                android:layout_width="344dp"
-                android:layout_height="78dp"
-                android:layout_marginTop="16dp"
-                android:text="A Senior ECE student at UT, Michael enjoys speading time in Austin and being involved in campus. He helps work on the outside integrations with Github, Travis-CI, and more."
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
-
-            <TextView
-                android:id="@+id/ece3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="Eletrical and Computer Engineering"
-                />
-
-            <TextView
-                android:id="@+id/mpcommit3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="@string/michaelcommits"
-                />
-
-            <TextView
-                android:id="@+id/mpIssues3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="... Issues"
-                />
-
-            <TextView
-                android:id="@+id/mptest3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="... Tests"
-                />
-            <TextView
-                android:id="@+id/name4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="Zach Sisti"
-                android:textStyle="bold"
-                />
-
-            <ImageView
-                android:id="@+id/imageView4"
-                android:layout_width="101dp"
-                android:layout_height="101dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-
-                app:srcCompat="@drawable/zach"
-                />
-
-            <TextView
-                android:id="@+id/biography4"
-                android:layout_width="344dp"
-                android:layout_height="78dp"
-                android:layout_marginTop="16dp"
-                android:text="Zach is a fourth year Electrical and Computer Engineering major at the University of Texas who specializes in software engineering. He is particularly interested in applying his love of software to the exploration of outer space and combatting climate change."
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
-
-            <TextView
-                android:id="@+id/ece4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="Eletrical and Computer Engineering"
-                />
-
-
-            <TextView
-                android:id="@+id/mpcommit4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="@string/michaelcommits"
-                />
-
-            <TextView
-                android:id="@+id/mpIssues4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="... Issues"
-                />
-
-            <TextView
-                android:id="@+id/mptest4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="... Tests"
-                />
-            <TextView
-                android:id="@+id/totalCommits"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="... Total Commits"
-                />
-
-            <TextView
-                android:id="@+id/totalIssues"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="... Total Issues"
-                />
-            <TextView
-                android:id="@+id/totalTests"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="... Total Tests"
-                />
-
-            <TextView
-                android:id="@+id/data"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="Data source: \n
-                 No data for Phase 1\n
-                 Data Source Links:\n
-                 No data for Phase 1\n"
-                />
-            <TextView
-                android:id="@+id/tools"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="TOOLS USED: \n
-                    Android Studio\n
-                    Used as the basic of our app creation\n
-                    Google Maps API\n
-                    Used to show maps of local recycling\n
-                    Github API\n
-                    Main collaborative tool\n"
-                />
-            <TextView
-                android:id="@+id/giturl"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:text="Github URL:"
-                />
-
-            <TextView
-                android:id="@+id/gihub"
-                android:autoLink="all"
-                android:clickable="true"
-                android:text="https://www.github.com/mpontikes/Our-Green-Routine"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="16dp"
-                />
-        </LinearLayout>
-
-    </ScrollView>
-
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="About US"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
