--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,7 +72,7 @@
         android:layout_width="116dp"
         android:layout_height="59dp"
         android:background="@color/colorPrimaryDark"
-        android:onClick="test"
+        android:onClick="searchNear"
         android:text="Search Nearby Facilities"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
