--- a/app/src/main/res/layout/activity_about_page.xml
+++ b/app/src/main/res/layout/activity_about_page.xml
@@ -332,7 +332,7 @@
                 android:layout_width="344dp"
                 android:layout_height="78dp"
                 android:layout_marginTop="16dp"
-                android:text="A Senior ECE student at UT, Zach hopes to one day apply his love of software engineering to the exploration of outer space or to the combat climate change."
+                android:text="A Senior ECE student at UT, Zach hopes to one day apply his love of software engineering to the exploration of outer space or to the combat of climate change."
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
