Hardcoded link to recycle info page

--- a/app/src/main/res/layout/activity_item_page.xml
+++ b/app/src/main/res/layout/activity_item_page.xml
@@ -26,11 +26,36 @@
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textSize="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/itemUrl"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.078"/>
+
+    <TextView
+        android:id="@+id/itemUrl"
+        app:layout_constraintTop_toBottomOf="@id/name"
+        app:layout_constraintBottom_toTopOf="@id/link"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Recycling Information:"
+        />
+
+    <TextView
+        android:id="@+id/link"
+        app:layout_constraintTop_toBottomOf="@id/itemUrl"
+        app:layout_constraintBottom_toTopOf="@id/imageView"
+        android:autoLink="all"
+        android:clickable="true"
+        android:text="https://earth911.com/recycling-guide/how-to-recycle-medical-sharps/"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="16dp"
+        />
 
     <ImageView
         android:id="@+id/imageView"
@@ -40,7 +65,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/name"
+        app:layout_constraintTop_toBottomOf="@+id/link"
         app:layout_constraintVertical_bias="0.291" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
