--- a/app/src/main/res/layout/activity_categories_page_wtr.xml
+++ b/app/src/main/res/layout/activity_categories_page_wtr.xml
@@ -7,7 +7,7 @@
     android:clickable="true"
     android:focusable="true"
     android:id="@+id/recyMainC"
-    tools:context=".CategoriesPage">
+    tools:context=".CategoriesPageWTR">
 
 
     <TextView
